# Library-Management

./: Dockerfile  app.py  auth_view.py  database.db  pyproject.toml  requirements.txt
.github/workflows/: main.yml
controller/: book_controller.py  order_controller.py  user_controller.py
model/: book_model.py  order_model.py  user_model.py
templates/: base.html  book_form.html  borrowed.html  borrowed_book.html  borrowed_books.html  create_borrowed_book.html  dashboard.html  edit_book.html  edit_borrowed.html  edit_borrowed_book.html  edit_user.html  library.html  list_book.html  login.html  register.html  search_books.html  user_form.html  user_list.html
tests/: test_app.py
